--- a/manifest.json
+++ b/manifest.json
@@ -6,9 +6,9 @@
   "action": {
     "default_popup": "hello.html",
     "default_title": "Random Data",
-    "default_icon": "icon.png"
+    "default_icon": "icon_2.png"
   },
-  "permissions": ["tabs", "scripting", "activeTab"],
+  "permissions": ["scripting", "activeTab"],
   "background": {
     "service_worker": "background.js",
     "type": "module"
